# workmate_test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fixtures_storage/: test.json
workmate/: pytest.ini
workmate/apps/kitten_api/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
workmate/apps/kitten_api/migrations/: 0001_initial.py  0002_kitten_age.py  0003_alter_kitten_owner_review.py  0004_alter_kitten_color.py
workmate/apps/kitten_api/tests/api/: conftest.py  test_api.py
workmate/workmate/: asgi.py  settings.py  urls.py  wsgi.py
